--- a/testplugin/src/main/resources/paper-plugin.yml
+++ b/testplugin/src/main/resources/paper-plugin.yml
@@ -1,4 +1,4 @@
-name: testplugin
-version: '1.0-SNAPSHOT'
+name: TestPlugin
+version: '1.0.0-SNAPSHOT'
 main: com.arrKhange1.testplugin.TestPlugin
-api-version: '1.21'
+api-version: '1.21.3'
